infrastructure/kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
  namespace: cadrart
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/cadrart2024-default: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_DATABASE
                  name: cadrart-config
            - name: MYSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DATABASE_PASSWORD
                  name: cadrart-secret
            - name: MYSQL_ROOT_HOST
              value: "localhost"
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DATABASE_ROOT_PASSWORD
                  name: cadrart-secret
            - name: MYSQL_USER
              valueFrom:
                secretKeyRef:
                  key: DATABASE_USER
                  name: cadrart-secret
          image: mysql
          name: db
          ports:
            - containerPort: 3306
              protocol: TCP
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-volume
              subPath: "mysql"
      restartPolicy: Always
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-volume
status: {}
