infrastructure/kubernetes/prometheus-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadrart-prometheus-nodeport
  namespace: cadrart
  labels:
    app: cadrart
    component: monitoring
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: http
      nodePort: 30090 # Expose on port 30090 on all nodes
  selector:
    app: cadrart
    component: monitoring
