infrastructure/kubernetes/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cadrart-staging-ingress
  namespace: cadrart-system
  annotations:
    ingressClassName: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/websocket-services: "backend-staging"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stg.ateliercadrart.com
      secretName: cadrart-staging-tls
  rules:
    - host: stg.ateliercadrart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-staging
                port:
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend-staging
                port:
                  number: 8001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-staging
                port:
                  number: 3000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: backend-staging
                port:
                  number: 3000
