infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cadrart-ingress
  namespace: cadrart
  annotations:
    ingressClassName: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/websocket-services: "backend-proxy"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ateliercadrart.com
      secretName: example-tls
  rules:
    - host: ateliercadrart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-proxy
                port:
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend-proxy
                port:
                  number: 8001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-proxy
                port:
                  number: 3000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: backend-proxy
                port:
                  number: 3000
