infrastructure/kubernetes/db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  namespace: cadrart
spec:
  podSelector:
    matchLabels:
      io.kompose.service: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 3306
    - from:
        - podSelector:
            matchLabels:
              app: phpmyadmin
      ports:
        - protocol: TCP
          port: 3306
